# nu_plugin_unicode

./: Cargo.toml  build.rs  unicode_data.rs
.helix/: ignore
crates/nu_plugin_unicode_ucd/: Cargo.toml  build.rs
crates/nu_plugin_unicode_ucd/build_types/: mod.rs  name_aliases.rs  unicode_data.rs
crates/nu_plugin_unicode_ucd/src/: lib.rs  types.rs
crates/nu_plugin_unicode_ucd/src/codegen/: mod.rs  name_aliases.rs  unicode_data.rs
crates/nu_plugin_unicode_ucd/src/types/: mod.rs  name_aliases.rs  unicode_data.rs
src/: lib.rs  main.rs
src/ucd/: mod.rs
src/ucd/general_category/: generated.rs
src/ucd/names/: mod.rs
src/unicode/: constants.rs  mod.rs
src/unicode/commands/: chars.rs
src/unicode/commands/chars/: config.rs
