[package]
name = "nu_plugin_unicode_ucd"
description = "UCD types and generated statics"

version.workspace = true
edition.workspace = true

authors.workspace = true

repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
phf_codegen = "0.13.1"
phf = { workspace = true }
ucd-parse = { workspace = true }

[dependencies]
nu-protocol = { workspace = true }
phf = { workspace = true }
ucd-parse = { workspace = true }

